--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.9"
 services:
   redis:
     image: redis:6
-    ports:
-      - "6379:6379"
+    # ports:
+    #   - "6379:6379"
 
   python-backend:
     build: ./app
