--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,22 +19,30 @@ steps:
   - task: DockerInstaller@0
     displayName: Install Docker
 
-  - script: docker-compose version
+  - script: |
+      echo "Installing Docker Compose v2 (plugin)..."
+      mkdir -p ~/.docker/cli-plugins
+      curl -SL https://github.com/docker/compose/releases/download/v2.24.5/docker-compose-linux-x86_64 -o ~/.docker/cli-plugins/docker-compose
+      chmod +x ~/.docker/cli-plugins/docker-compose
+      docker compose version
+    displayName: "Install Docker Compose v2"
+
+  - script: docker compose version
     displayName: "Check Docker Compose version"
 
   - script: |
-      echo "Validating docker-compose file..."
-      docker-compose -f $(COMPOSE_FILE) config
-    displayName: "Validate docker-compose syntax"
+      echo "Validating docker compose file..."
+      docker compose -f $(COMPOSE_FILE) config
+    displayName: "Validate docker compose syntax"
 
   - script: |
       echo "Building all services..."
-      docker-compose -f $(COMPOSE_FILE) build --no-cache
+      docker compose -f $(COMPOSE_FILE) build --no-cache
     displayName: "Build all Docker services"
 
   - script: |
       echo "Starting services..."
-      docker-compose -f $(COMPOSE_FILE) up -d
+      docker compose -f $(COMPOSE_FILE) up -d
     displayName: "Start containers (for test)"
 
   - script: |
@@ -48,8 +56,8 @@ steps:
 
   - script: |
       echo "Stopping test containers..."
-      docker-compose -f $(COMPOSE_FILE) down
-    displayName: "Cleanup (docker-compose down)"
+      docker compose -f $(COMPOSE_FILE) down
+    displayName: "Cleanup (docker compose down)"
 
   - task: AzureWebAppContainer@1
     displayName: "Deploy to Azure Web App (Docker Compose)"
