--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,17 @@ steps:
       versionSpec: "3.x"
     displayName: "Use Python"
 
-  - task: DockerInstaller@0
-    displayName: Install Docker
+  - script: |
+      echo "Installing Docker Engine 20.10+"
+      sudo apt-get update
+      sudo apt-get remove -y docker docker-engine docker.io containerd runc || true
+      sudo apt-get install -y ca-certificates curl gnupg lsb-release
+      curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+      echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+      sudo apt-get update
+      sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+      docker --version
+    displayName: "Install latest Docker Engine"
 
   - script: |
       echo "Installing Docker Compose v2 (plugin)..."
