use spawn instead of fork

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -21,4 +21,9 @@ RUN pip install --no-cache-dir \
     requests \
     psutil
 
+# Evitar os.fork, forçar spawn
+ENV PYTORCH_MULTIPROCESSING_START_METHOD=spawn
+ENV PYTORCH_DISABLE_MKLDNN=1
+ENV PYTHONUNBUFFERED=1
+
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
