--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ version: "3.9"
 services:
   redis:
     image: redis:6
-    ports:
-      - "6379:6379"
+    # ports:
+    #   - "6379:6379"
 
   python-backend:
     build: ./app
-    ports:
-      - "8000:8000"
+    # ports:
+    #   - "8000:8000"
     depends_on:
       - redis
     environment:
