--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,8 +64,21 @@ steps:
 
   - script: |
       echo "Substituting variables into docker-compose.yml..."
-      sed "s|\${DOCKER_REGISTRY_URL}|$(DOCKER_REGISTRY_URL)|g" docker-compose.yml > docker-compose.deploy.yml
+      envsubst < docker-compose.yml > docker-compose.deploy.yml
     displayName: "Prepare docker-compose.deploy.yml"
+    env:
+      DOCKER_REGISTRY_URL: $(DOCKER_REGISTRY_URL)
+      FIREBASE_CREDENTIAL: $(FIREBASE_CREDENTIAL)
+      REDIS_HOST: $(REDIS_HOST)
+      FIREBASE_STORAGE_BUCKET: $(FIREBASE_STORAGE_BUCKET)
+      FRONTEND_URLS: $(FRONTEND_URLS)
+
+  - script: |
+      echo "---- docker-compose.deploy.yml ----"
+      cat docker-compose.deploy.yml
+      echo "Checking for unresolved variables..."
+      grep '\${' docker-compose.deploy.yml && echo "❌ Unresolved vars found!" && exit 1 || echo "✅ All variables substituted."
+    displayName: "Show and validate docker-compose.deploy.yml"
 
   - task: AzureWebAppContainer@1
     displayName: "Deploy to Azure Web App"
