--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,34 @@
 services:
   redis:
     image: redis:6
-    # ports:
-    #   - "6379:6379"
 
   python-backend:
-    image: $${DOCKER_REGISTRY_URL}/python-backend:latest
-    # ports:
-    #   - "8000:8000"
+    build: ./app
     depends_on:
       - redis
     environment:
-      PYTHONUNBUFFERED: 1 # helps with log streaming
+      PYTHONUNBUFFERED: 1
     env_file: .env
 
   node-api:
-    image: $${DOCKER_REGISTRY_URL}/node-api:latest
+    build: ./queue
     command: node dist/api/server.js
     ports:
-      - "80:80"
+      - "3001:3001"
     environment:
       REDIS_HOST: redis
       FIREBASE_CREDENTIAL: ${FIREBASE_CREDENTIAL}
-      WEBSITES_PORT: 80
     env_file: .env
     depends_on:
       - redis
       - python-backend
 
   node-worker:
-    image: $${DOCKER_REGISTRY_URL}/node-worker:latest
+    build: ./queue
     command: node dist/worker.js
     environment:
       REDIS_HOST: redis
-      FIREBASE_CREDENTIAL: $${FIREBASE_CREDENTIAL}
+      FIREBASE_CREDENTIAL: ${FIREBASE_CREDENTIAL}
     env_file: .env
     depends_on:
       - redis
