--- a/queue/package.json
+++ b/queue/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/storage": "^7.16.0",
     "axios": "^1.10.0",
     "bullmq": "^5.56.4",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
@@ -23,6 +24,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.14",
